fix: set black color of border for bulma select to align with UNDP design.

--- a/packages/undp-bulma/bulma.scss
+++ b/packages/undp-bulma/bulma.scss
@@ -138,6 +138,10 @@ $black: #000;
   }
 }
 
+.select select {
+  border-color: $black !important;
+}
+
 // load SohneBreit font
 @font-face {
   font-display: swap;
